--- a/experience.html
+++ b/experience.html
@@ -64,7 +64,7 @@
       <div id="video_container">
         <pid="video_title"><b>Watch the video 	&darr;</b></p>
           <p>
-            <video controls poster="multimedia/image_video_placeholder">
+            <video controls poster="multimedia/image_video_placeholder.jpg">
 		     <source src="multimedia/Video Placeholder.mp4" type="video/mp4">
 		     The video can not be played in this browser.
 	       </video>
